design tweaks fix to come platforms not showing consoles

--- a/views/public/css/info.css
+++ b/views/public/css/info.css
@@ -12,12 +12,13 @@
   left: 0;
   width: 100%;
   height: 100%;
+  vertical-align: middle;
+  align-items: center;
 }
 .embed-responsive {
-  position: relative;
+  position: initial;
   overflow: hidden;
   width: 100%;
-  
 }
 .slideshow-container {
   position: relative;
@@ -45,9 +46,27 @@
   width: 240px;
 }
 
-.console {
-  height: 1.5rem;
+.carousel-inner {
+  height: 0;
+  padding-bottom: 60%;
 }
-.text-secondary{
-  font-size: 1.5rem;
+
+.carousel-item {
+  position: absolute !important; /* Bootstrap is insistent */
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+.carousel-item img {
+  height: 100%;
+  object-fit: contain; 
+}
+
+.console {
+  height: 1.6rem;
+}
+.text-platform{
+  font-size: 1.5rem!important;
 }
